<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Encuesta">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:ems="10"
        android:gravity="center|start"
        android:text="@string/txtP1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center|start"
        android:text="@string/txtP2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:ems="10"
        android:gravity="center|start"
        android:text="@string/txtP3" />

    <EditText
        android:id="@+id/edtPregunta1"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center|start"
        android:hint="Respuesta"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/cbFutbol"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="298dp"
        android:layout_marginRight="298dp"
        android:ems="10"
        android:text="@string/cbFut"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="172dp" />

    <CheckBox
        android:id="@+id/cbBasquet"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:ems="10"
        android:text="@string/cbBasq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="170dp" />

    <CheckBox
        android:id="@+id/cbTenis"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:ems="10"
        android:text="@string/cbVol"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="168dp" />

    <RadioGroup
        android:layout_width="400dp"
        android:layout_height="81dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="268dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="276dp">

        <RadioButton
            android:id="@+id/rbSi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:baselineAligned="false"
            android:text="@string/rbSi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rbNo"
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/rbNo"
            app:layout_constraintStart_toStartOf="parent" />
    </RadioGroup>

    <Button
        android:id="@+id/btnFinalizarEncuesta"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="392dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:ems="10"
        android:text="@string/btnFinEncuesta"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="408dp" />
</RelativeLayout>