<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <TextView
        android:id="@+id/txtUConectado"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/txtUConectado"
        android:textColor="#060F42"
        android:textSize="18sp"
        tools:layout_editor_absoluteY="2dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="400dp"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        app:srcCompat="@drawable/download" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="190dp"
        android:gravity="center_vertical"
        android:text="@string/txtNombre" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:gravity="center_vertical"
        android:text="@string/txtMInicial" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="400dp"
        android:gravity="center_vertical"
        android:text="@string/txtPMensual" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtMonto"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="1dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnCalcCuota"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:gravity="center"
        android:onClick="calcularCuota"
        android:text="@string/btnCalcCuota" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="475dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/btnGuardar" />

    <TextView
        android:id="@+id/txtCuota"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="1dp"
        android:ems="10" />

</RelativeLayout>